# sponsor-tools

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  merge.rs  merge_accounts.rs  sle.rs
tests/: stateless-journey.sh  stool.rs
tests/fixtures/: notes.ron  sponsors-2021.csv  sponsors-2022.csv  stripe-activity.csv
tests/snapshots/: failure-missing-input-file
tests/snapshots/merge/: fail-no-input  success-two-files.csv
tests/snapshots/merge_account/: success-input-file-produces-correct-output-max-distance.csv  success-input-file-produces-correct-output-with-custom-separators.csv  success-input-file-produces-correct-output-with-notes.csv  success-input-file-produces-correct-output.csv
